GNOME Bugzilla – Bug 630140
iso8859x encoding error at buffer end, not using iconv
Last modified: 2012-05-11 02:12:54 UTC
Created attachment 170644 [details] test.xml (to reproduce the error) c:\Projects\libxml2-2.7.7-snapshot\win32>bin.msvc\xmllint.exe test.xml encoding error : output conversion failed due to conv error, bytes 0xC5 0x00 0x7 8 0x6D I/O error : encoder error c:\Projects\libxml2-2.7.7-snapshot\win32> Configuration options: cscript configure.js compiler=msvc static=yes debug=no cruntime=/MD iconv=no iso8859x=yes ftp=no http=no threads=no
Created attachment 170646 [details] [review] Proposed patch which seems to solve this problem.
Okay, I can reproduce this paphio:~/XML -> xmllint test.xml encoding error : output conversion failed due to conv error, bytes 0xC5 0x00 0x78 0x6D I/O error : encoder error paphio:~/XML -> xmllint --version xmllint: using libxml version 20707-GITv2.7.7-25-ge306260 compiled with: Threads Tree Output Push Reader Patterns Writer SAXv1 FTP HTTP DTDValid HTML Legacy C14N Catalog XPath XPointer XInclude ISO8859X Unicode Regexps Automata Expr Schemas Schematron Modules Debug MemDebug RunDebug Zlib paphio:~/XML -> but I think the patch is wrong, it actually looses characters silently, we should not do this ... ever. But it's a serious error so I chased it, it's actually a couple of lines fix, which is now commited in git head, thanks for the report and the patch attempt ! Daniel
Daniel, Many thanks for your fix, I'll check it out! Regards, Szilveszter
Thanks again! We have verified the bugfix.
Okay, marked as fixed :-) Daniel