630140 fix iso995x encoding error

https://bugzilla.gnome.org/show_bug.cgi?id=630140
Fix the bug, which happen when using the embedded converters and
not iconv